.provarCaches/00D5f000005vwGkEAI/objects/al__Foo__c.object
<CustomObject>
    <description>Should be used in unit tests only</description>
    <fields>
        <fullName>al__Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>al__Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>al__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>al__Datetime__c</fullName>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>al__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>al__NumberDecimal__c</fullName>
        <label>Number Decimal</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>al__NumberInteger__c</fullName>
        <label>Number Integer</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>al__Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>al__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>al__PicklistMultiSelect__c</fullName>
        <label>Picklist Multi Select</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bar 1</fullName>
                </value>
                <value>
                    <fullName>Bar 2</fullName>
                </value>
                <value>
                    <fullName>Bar 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>al__Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bar 1</fullName>
                </value>
                <value>
                    <fullName>Bar 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>al__Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>al__Textarea__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>al__Textarealong__c</fullName>
        <label>Text Area Long</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>al__Textarearich__c</fullName>
        <label>Text Area Rich</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>al__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Foo</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Foos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>